src/test/deca/codegen/valid/created/objet/instanceof_1.deca
class A {

 }
class B extends A {

 }
class C extends B {

 }
 
{
    A a;
    B b;
    a = new C();
    if (a instanceof B) {
    b = (B)(a);
    println("passed");
    }
}