src/test/deca/codegen/invalid/created/objet/firstDefineclass.deca
//error : cannot find symbol "C" type is inexistant

class A {
    C c = new C();
}